Fix image width and canvas height on mobile devices

--- a/index.css
+++ b/index.css
@@ -18,9 +18,12 @@ canvas {
     width: 100%;
     background: white;
 }
+img {
+    width: 100%;
+}
 .container {
-    height: 320px;
-    border: 1px solid black;
+    height: calc(54vw);
+    border: 1px solid #878787;
     overflow: hidden;
 }
 
@@ -34,8 +37,12 @@ canvas {
 }
 
 @media screen and (min-width: 568px) {
+    img {
+        width: auto;
+    }
     .container {
         margin: auto;
+        height: 320px;
     }
     .container-legend {
         margin: 5px auto;
